add enable native access for javafx and unnamed to get rid of warnings on java 25. Add jaas.conf to get kerberos authentication to work for sql server.