@@ -38,6 +38,9 @@ def jdkVersion = "25+37"
 
 application {
     mainClass = 'se.alipsa.gade.Gade'
+    applicationDefaultJvmArgs = [
+      '--enable-native-access=javafx.graphics,javafx.media,javafx.web,ALL-UNNAMED'
+    ]
 }
 
 /*javafx {
@@ -266,40 +269,41 @@ processResources.doLast {
 }
 
 test {
-    useJUnitPlatform()
-    testLogging {
-        // set options for log level LIFECYCLE
-        events TestLogEvent.FAILED,
-                TestLogEvent.PASSED,
-                TestLogEvent.SKIPPED,
-                TestLogEvent.STANDARD_OUT
-        exceptionFormat = TestExceptionFormat.FULL
-        showExceptions = true
-        showCauses = true
-        showStackTraces = true
+  jvmArgs += ['--enable-native-access=javafx.graphics,javafx.media,javafx.web,ALL-UNNAMED']
+  useJUnitPlatform()
+  testLogging {
+    // set options for log level LIFECYCLE
+    events TestLogEvent.FAILED,
+        TestLogEvent.PASSED,
+        TestLogEvent.SKIPPED,
+        TestLogEvent.STANDARD_OUT
+    exceptionFormat = TestExceptionFormat.FULL
+    showExceptions = true
+    showCauses = true
+    showStackTraces = true
 
-        // set options for log level DEBUG and INFO
-        debug {
-            events TestLogEvent.STARTED,
-                    TestLogEvent.FAILED,
-                    TestLogEvent.PASSED,
-                    TestLogEvent.SKIPPED,
-                    TestLogEvent.STANDARD_ERROR,
-                    TestLogEvent.STANDARD_OUT
-            exceptionFormat = TestExceptionFormat.FULL
-        }
-        info.events = debug.events
-        info.exceptionFormat = debug.exceptionFormat
-
-        afterSuite { desc, result ->
-            if (!desc.parent) { // will match the outermost suite
-                def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
-                def startItem = '|  ', endItem = '  |'
-                def repeatLength = startItem.length() + output.length() + endItem.length()
-                println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
-            }
-        }
+    // set options for log level DEBUG and INFO
+    debug {
+      events TestLogEvent.STARTED,
+          TestLogEvent.FAILED,
+          TestLogEvent.PASSED,
+          TestLogEvent.SKIPPED,
+          TestLogEvent.STANDARD_ERROR,
+          TestLogEvent.STANDARD_OUT
+      exceptionFormat = TestExceptionFormat.FULL
     }
+    info.events = debug.events
+    info.exceptionFormat = debug.exceptionFormat
+
+    afterSuite { desc, result ->
+      if (!desc.parent) { // will match the outermost suite
+        def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
+        def startItem = '|  ', endItem = '  |'
+        def repeatLength = startItem.length() + output.length() + endItem.length()
+        println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
+      }
+    }
+  }
 }
 
 runtime {
@@ -348,6 +352,11 @@ tasks.runtime.doLast {
         into(project.layout.buildDirectory.dir("image/gade-linux/"))
         include '*.sh'
     }
+    copy {
+      from("$projectDir/src/bin/cponly")
+      into(project.layout.buildDirectory.dir("image/gade-linux/conf"))
+      include 'jaas.conf'
+    }
 
     copy {
         from("$projectDir/src/main/resources/script/")
@@ -359,6 +368,11 @@ tasks.runtime.doLast {
         into(project.layout.buildDirectory.dir("image/gade-mac/"))
         include '*.sh'
     }
+    copy {
+      from("$projectDir/src/bin/cponly")
+      into(project.layout.buildDirectory.dir("image/gade-mac/conf"))
+      include 'jaas.conf'
+    }
 
     copy {
         from("$projectDir/src/main/resources/script/")
@@ -369,6 +383,12 @@ tasks.runtime.doLast {
     copy {
         from("$projectDir/src/bin/cponly")
         into(project.layout.buildDirectory.dir("image/gade-win/"))
+        exclude 'jaas.conf'
+    }
+    copy {
+      from("$projectDir/src/bin/cponly")
+      into(project.layout.buildDirectory.dir("image/gade-win/conf"))
+      include 'jaas.conf'
     }
 
     copy {
